[package]
name = "thin-logger"
version = "0.1.3"
edition = "2024"
description = "A thin wrapper around env_logger with better formatting."
repository = "https://github.com/0xDAEF0F/thin-logger"
license = "MIT"
authors = ["Alex T. <aletapia@proton.me>"]

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
chrono = "0.4.40"
colored = "3.0.0"
